# triagegeist

./: .gitignore  README.md  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
docs/: competition_overview.md  writeup.md
notebooks/: triagegeist_baseline.ipynb  triagegeist_submission.py
src/: config.py  eda.py  explainability.py  features.py  train.py
