[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "triagegeist"
version = "0.1.0"
description = "Emergency triage acuity prediction — Triagegeist Hackathon"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "xgboost",
    "lightgbm",
    "catboost",
    "optuna",
    "shap",
    "sentence-transformers",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "ipykernel",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
